[package]
name = "yew-os"
version = "0.3.2"
edition = "2021"
repository = "https://github.com/11reed/yew-os"
description = "Yew hooks for user agents"
license = "MIT"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
web-sys = { version = "0.3.61", features = ["Navigator", "Window"] }